--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;700&family=Ubuntu:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/output.css">
 
     <script type="module" src="./js/pubsub.js" defer></script>
@@ -18,77 +25,64 @@
     <script type="text/javascript" src="js/pubsub.js" defer></script> -->
 </head>
 
-<body class="h-screen flex flex-col">
+<body class="h-screen flex flex-col font-['Orbitron'] bg-black text-white">
+
+    <header class="presentation-ui flex items-center justify-center pt-8">
+        <p class="font-bold text-5xl">Tic Tac Toe</p>
+    </header>
     <main class="flex-1">
-        <div class="presentation-ui hidden"></div>
-        <div class="game-ui h-full grid grid-rows-[1fr_2fr_1fr] grid-cols-2 
-        md:grid-rows-[4fr_1fr] md:grid-cols-[1fr_3fr_1fr] p-5 pt-7 gap-5">
+
+        <div class="game-ui h-full grid grid-rows-[1fr_3fr_1fr] grid-cols-2 
+        md:grid-rows-[4fr_1fr] md:grid-cols-[1fr_3fr_1fr] p-5 pt-7 pb-0 gap-5 xl:px-[10%]">
             <div
                 class="player1 row-start-1 row-end-2 col-start-1 col-end-2
-                md:row-start-1 md:row-end-3 md:col-start-1 md:col-end-1 div-player-panel-default md:flex-col md:justify-center md:items-center">
-                <div class="name-image flex items-center justify-center flex-col md:gap-5">
-                    <img class="h-[100px] md:h-[200px]" src="" alt="">
-                    <p></p>
+                md:row-start-1 md:row-end-3 md:col-start-1 md:col-end-1 div-player-panel-default md:flex-col justify-center">
+                <div class="name-image flex items-center justify-center flex-col">
+                    <p class="text-2xl after:content-['_(x)']"></p>
                 </div>
-                <div class="score flex flex-col justify-center items-start  pl-[50px] md:pl-0">
-                    <div class="wins flex gap-3">
-                        <p>Wins: </p>
-                        <p class="wins-value"></p>
-                    </div>
-                    <div class="losses  flex gap-3"">
-                        <p>Losses: </p>
-                        <p class=" losses-value">
-                        </p>
-                    </div>
+                <div class="score flex flex-col justify-center items-center md:pl-0">
+                    <p class="wins-value text-2xl"></p>
                 </div>
             </div>
 
-            <div id="gameboard" class=" row-start-2 row-end-3 col-start-1 col-end-3
+            <div id="gameboard" class="font-['Rajdhani'] row-start-2 row-end-3 col-start-1 col-end-3
             md:row-start-1 md:row-end-2 md:col-start-2 md:col-end-3
-            grid grid-rows-3 grid-cols-3 gap-6 bg-slate-400">
-                <div id="r0-c0" class="board-cell md:text-[13rem]"></div>
-                <div id="r0-c1" class="board-cell md:text-[13rem]"></div>
-                <div id="r0-c2" class="board-cell md:text-[13rem]"></div>
+            grid grid-rows-3 grid-cols-3 gap-3 bg-white border-[1px] border-black">
+                <div id="r0-c0" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
+                <div id="r0-c1" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
+                <div id="r0-c2" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
 
-                <div id="r1-c0" class="board-cell md:text-[13rem]"></div>
-                <div id="r1-c1" class="board-cell md:text-[13rem]"></div>
-                <div id="r1-c2" class="board-cell md:text-[13rem]"></div>
+                <div id="r1-c0" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
+                <div id="r1-c1" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
+                <div id="r1-c2" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
 
-                <div id="r2-c0" class="board-cell md:text-[13rem]"></div>
-                <div id="r2-c1" class="board-cell md:text-[13rem]"></div>
-                <div id="r2-c2" class="board-cell md:text-[13rem]"></div>
-
-
+                <div id="r2-c0" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
+                <div id="r2-c1" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
+                <div id="r2-c2" class="board-cell md:text-[9rem] lg:text-[12rem]"></div>
             </div>
 
             <div class="actions row-start-3 row-end-4 col-start-1 col-end-3
                 md:row-start-2 md:row-end-3 md:col-start-2 md:col-end-3 flex items-center justify-center">
-                <button class="m-auto py-2 px-4 border-0 bg-black w-28 text-white rounded-sm font-bold">Restart</button>
+                <button class="m-auto py-2 px-4 border-0 bg-white w-28 text-black rounded-lg font-bold">Restart</button>
             </div>
-            <div
-                class="player2 row-start-1 row-end-2 col-start-2 col-end-3
-                md:row-start-1 md:row-end-3 md:col-start-3 md:col-end-4 div-player-panel-default md:justify-center md:items-center ">
-                <div class="name-image flex items-center justify-center flex-col md:gap-5">
-                    <img class="h-[100px] md:h-[200px]" src="" alt="">
-                    <p></p>
+            <div class="player2 row-start-1 row-end-2 col-start-2 col-end-3
+                md:row-start-1 md:row-end-3 md:col-start-3 md:col-end-4 div-player-panel-default justify-center">
+                <div class="name-image flex items-center justify-center flex-col">
+                    <p class="text-2xl after:content-['_(o)']"></p>
                 </div>
-                <div class="score lex flex-col justify-center items-start pl-[50px] md:pl-0">
-                    <div class="wins flex gap-3">
-                        <p>Wins: </p>
-                        <p class="wins-value"></p>
-                    </div>
-                    <div class="losses  flex gap-3"">
-                        <p>Losses: </p>
-                        <p class=" losses-value">
-                        </p>
-                    </div>
+                <div class="score flex flex-col justify-center items-center md:pl-0">
+                    <p class="wins-value text-2xl"></p>
                 </div>
             </div>
         </div>
-
+        <audio id="player1-audio" src="audio/player1.mp3" preload="auto"></audio>
+        <audio id="player2-audio" src="audio/player2.mp3" preload="auto"></audio>
+        <audio id="welcome-audio" src="audio/welcome.mp3" preload="auto"></audio>
+        <audio id="match-audio" src="audio/3inline.mp3" preload="auto"></audio>
+        <audio id="tie-audio" src="audio/tie.mp3" preload="auto"></audio>
     </main>
-    <svg id="svg-line" class="fixed left-0 top-0 m-0 pointer-events-none z-auto w-full h-full"></svg>
-    <footer class="flex items-center justify-center gap-3 bg-black text-white p-3 text-lg">
+    <!-- <svg id="svg-line" class="fixed left-0 top-0 m-0 pointer-events-none z-auto w-full h-full"></svg> -->
+    <footer class="flex items-center justify-center gap-3 bg-white text-black p-2 text-lg">
         <span>Created by <strong><a id="link-footer" href="https://github.com/pieroguerrero">pieroguerrero</a>
             </strong></span>
         <a href="https://github.com/pieroguerrero">
