finished ajustments adding audio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main class="flex-1 md:pt-8">
 
-        <div class="game-ui h-full grid grid-rows-[1fr_3fr_1fr] grid-cols-2 
+        <div class="game-ui hidden h-full grid grid-rows-[1fr_3fr_1fr] grid-cols-2 
         md:grid-rows-[4fr_1fr] md:grid-cols-[1fr_3fr_1fr] p-5 pt-7 pb-0 gap-5 xl:px-[10%]">
             <div
                 class="player1 row-start-1 row-end-2 col-start-1 col-end-2
@@ -95,7 +95,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="names-collection h-full flex items-center justify-center">
+            <div class="names-collection hidden h-full flex items-center justify-center">
 
                 <form id="form-collection" method="dialog">
                     <fieldset class="flex flex-col items-center justify-center gap-9">
