finished ajustments with play time audio

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
             </div>
             <div class="names-collection hidden h-full flex items-center justify-center">
 
-                <form id="form-collection" method="dialog">
+
+
+                <div id="form-collection">
                     <fieldset class="flex flex-col items-center justify-center gap-9">
                         <div class="player-name flex flex-col gap-2">
 
@@ -120,7 +122,7 @@
                         </div>
                     </fieldset>
 
-                </form>
+                </div>
 
             </div>
         </div>
@@ -131,6 +133,7 @@
         <audio id="tie-audio" src="audio/tie.mp3" preload="auto"></audio>
         <audio id="fight-audio" src="audio/fight.mp3" preload="auto"></audio>
         <audio id="selection-audio" src="audio/selection.mp3" preload="auto"></audio>
+        <audio id="playtime-audio" src="audio/playtime.mp3" preload="auto"></audio>
     </main>
     <!-- <svg id="svg-line" class="fixed left-0 top-0 m-0 pointer-events-none z-auto w-full h-full"></svg> -->
     <footer class="flex items-center justify-center gap-3 bg-white text-black p-2 text-lg">
